[tool.poetry]
name = "data-viewer"
version = "0.1.0"
description = ""
authors = ["partvishegy <venczeli.jozsef@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.51.0"
maturity-tools = {path = "../maturity_tools", develop = true}
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
