[tool.poetry]
name = "data-viewer"
version = "0.1.0"
description = ""
authors = ["partvishegy <venczeli.jozsef@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.51.0"
maturity-tools = {path = "../maturity_tools", develop = true}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.46"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
