[tool.poetry]
name = "maturity-tools"
version = "0.1.0"
description = ""
authors = ["partvishegy <venczeli.jozsef@gmail.com>"]
readme = "README.md"
packages = [
    { include = "maturity_tools" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.5"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
